--- a/yeb-server/pom.xml
+++ b/yeb-server/pom.xml
@@ -58,8 +58,7 @@
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-b
-        oot-starter-security</artifactId>
+      <artifactId>spring-boot-starter-security</artifactId>
     </dependency>
 
     <dependency>
