员工资料-基本资料-分页查询修改

--- a/yeb-server/src/main/resources/config/application.yml
+++ b/yeb-server/src/main/resources/config/application.yml
@@ -75,6 +75,12 @@ mybatis-plus:
 logging:
   level:
     com.hang.server.mapper: debug
+#mybatis 分页插件
+pagehelper:
+  helperDialect: mysql
+  reasonable: true
+  supportMethodsArguments: true
+  params: count=countSql
 
 
 jwt:
