--- a/yeb-server/pom.xml
+++ b/yeb-server/pom.xml
@@ -134,7 +134,16 @@
       <artifactId>activation</artifactId>
       <version>1.1.1</version>
     </dependency>
-
+    <dependency>
+      <groupId>com.github.pagehelper</groupId>
+      <artifactId>pagehelper</artifactId>
+      <version>5.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.pagehelper</groupId>
+      <artifactId>pagehelper-spring-boot-starter</artifactId>
+      <version>1.2.12</version>
+    </dependency>
   </dependencies>
 
 
